<resources>
    <string name="app_name">Bridge</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="donor">donor</string>
    <string name="recipient">recipient</string>
    <string name="university">university</string>
    <string name="bridge_logo">Bridge Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter Name</string>
    <string name="is_Logged_In">isLoggedIn</string>
    <string name="parent_package_name">com.adoptvillage.bridge</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="location_star">Location*</string>
    <string name="role">Role</string>
    <string name="occupation">Occupation</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="displayName">displayName</string>
    <string name="idToken">idToken</string>
    <string name="localId">localId</string>
    <string name="refreshToken">refreshToken</string>
    <string name="moderator">moderator</string>
    <string name="is_email_verified">isEmailVerified</string>
    <string name="is_profile_saved">isProfileSaved</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome!</string>
    <string name="successful_napplications">Successful\nApplications</string>
    <string name="amount_ndonated">Amount\nDonated</string>
    <string name="history">History</string>
    <string name="adopt_village">Adopt Village</string>
    <string name="application_no">Application No.</string>
    <string name="amount">Amount</string>
    <string name="submitted">Submitted</string>
    <string name="reviewed">Being Reviewed</string>
    <string name="verified">Verified</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="sub_district">Sub District</string>
    <string name="village">Village</string>
    <string name="preferred_location">Preferred Location</string>
    <string name="update">Update</string>
    <string name="applications">Applications List</string>
    <string name="select_a_role">SELECT A ROLE</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
    <string name="OTPdash">------</string>
    <string name="enter_6_digit_otp">Enter 6 digit OTP</string>
    <string name="submit_application">New Application</string>
    <string name="student_s_details">Student\'s Details</string>
    <string name="first_name">First Name*</string>
    <string name="abhishek">Abhishek</string>
    <string name="last_name">Last Name*</string>
    <string name="yadav">Yadav</string>
    <string name="aadhaar_number">Aadhar No.*</string>
    <string name="contact_number">Contact No.*</string>
    <string name="_1234567890">1234567890</string>
    <string name="fields_are_compulsory">(*) fields are compulsory</string>
    <string name="next">Next</string>
    <string name="institution_s_details">Institution\'s Details</string>
    <string name="institute_name">Institute Name*</string>
    <string name="affiliation_code">Aff. Code*</string>
    <string name="course_class">Course/Class*</string>
    <string name="semester_year">Semester/Year*</string>
    <string name="fee_amount">Fee Amount*</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="proof_of_enrollment">Proof of Enrollment*</string>
    <string name="upload_recent_fee_receipt_pdfs_only">Upload recent fee receipt (PDFs only)</string>
    <string name="select">Select</string>
    <string name="fee_structure">Fee Structure*</string>
    <string name="upload_your_institutions_fee_structur_pdfs_only">Upload your institutions fee structure(PDFs only)</string>
    <string name="bank_statement_last_6_months">Bank Statement*</string>
    <string name="additional_documents">Additional Documents</string>
    <string name="plusSymbol">+</string>
    <string name="upload">Upload</string>
    <string name="student_details">Student Details</string>
    <string name="institute_details">Institute Details</string>
    <string name="moderator_email_ins">Please add/invite a moderator in order to accept the application</string>
    <string name="dashboard">Dashboard</string>
    <string name="back">Back</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="institute_location">Institute Location</string>
    <string name="recipient_hometown">Recipient Hometown</string>
    <string name="purpose">Purpose</string>
    <string name="invite_moderator">Invite Moderator</string>
    <string name="accept">Accept</string>
    <string name="village_adopted">Village\nAdopted</string>
    <string name="current_application">Current Application</string>
    <string name="application_to_review">Applications To Review</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
</resources>